--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,14 @@ services:
             - POSTGRES_PASSWORD=postgres_password
     redis:
         image: "redis:latest"
-    server:
+    frontdoor:
+        restart: always
+        build:
+            context: ./frontdoor
+            dockerfile: Dockerfile.dev
+        ports:
+            - "8080:80"
+    api:
         build:
             context: ./server
             dockerfile: Dockerfile.dev
@@ -23,5 +30,17 @@ services:
             - PGDATABASE=postgres
             - PGUSER=postgres
             - PGPASSWORD=postgres_password
-        # command: ["npm", "run", "test"]
-        #
+    client:
+        build:
+            context: ./client
+            dockerfile: Dockerfile.dev
+        volumes:
+            - /usr/app/node_modules
+            - ./client:/usr/app
+    worker:
+        build:
+            context: ./worker
+            dockerfile: Dockerfile.dev
+        volumes:
+            - /usr/app/node_modules
+            - ./worker:/usr/app
